--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Custom part
+# Generated animations and scriptable objects
+/Assets/Resources/Clothes/Animations/*.anim
+/Assets/Resources/Clothes/ScriptableObjects/*
+
